[workspace]
members = [
    "examples/test_fuzz",
    "examples/test_emu_riscv",
    "libs_no_std/acpi",
    "libs_no_std/core_requirements",
    "libs_no_std/diss",
    "libs_no_std/efi",
    "libs_no_std/elf",
    "libs_no_std/emu",
    "libs_no_std/evil",
    "libs_no_std/ld",
    "libs_no_std/mmu",
    "libs_no_std/traits",
#    "libs/dbg",
    "uefios",
]