[package]
name = "test_emu_riscv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
goblin = "0.5.4"
mmu = {path="../../libs_no_std/mmu", features = ["std"]}
emu = {path="../../libs_no_std/emu", features = ["dbg_prints"]}
ld  = {path="../../libs_no_std/ld"}
#diss = {path="../../libs_no_std/diss", features = ["std"]}