[package]
name = "test_fuzz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[package.metadata.cross.target.riscv64gc-unknown-linux-gnu]
xargo = false
image = "rustembedded/cross:riscv64gc-unknown-linux-gnu-0.2.1"
runner = "qemu-system-riscv64"